--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer-cli": "^1.0.0",
+    "browser-sync": "^2.26.3",
     "mkdirp": "^1.0.4",
     "node-sass": "^5.0.0",
     "npm-run-all": "^4.1.5",
